# HJRT

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  ImageExporter.cpp  ImageExporter.h  Material.cpp  Material.h  Objects.cpp  Objects.h  README.md  Scene.cpp  Scene.h  SceneSetUp.md  TODO.md  aabb.cpp  aabb.h  bvh.h  camera.cpp  imageExporter.cpp  imageExporter.h  main.cpp  material.cpp  material.h  objects.cpp  objects.h  scene.cpp  scene.h  texture.cpp  texture.h  utility.cpp  utility.h
include/: aabb.h  bvh.h  camera.h  constants.h  directillumination.h  explicitlighting.h  film.h  geometry.h  imageExporter.h  integrator.h  log.h  material.h  mesh.h  movingobject.h  multithreadIntegrator.h  object.h  objects.h  onb.h  pathtracer.h  pathtracerDI.h  ray.h  rtui.h  sampler.h  scene.h  shape.h  texture.h  utility.h
log/: 2019-06-18.md  2019-6-14.md  2019-6-8.md  2019-7-10.md  2019-7-20.md  2019-7-26.md  2019-7-31.md  2019-8-4.md
log/img/: blur2.ppm  image copy.ppm  imageRight.ppm
mesh/: huaji.mtl
scene/: SceneSetUp.md  castle.cpp  shaderballs.cpp  standingDiamond.cpp
src/: aabb.cpp  bvh.cpp  camera.cpp  directillumination.cpp  explicitlighting.cpp  film.cpp  geometry.cpp  log.cpp  main.cpp  material.cpp  mesh.cpp  movingobject.cpp  multithreadintegrator.cpp  objects.cpp  onb.cpp  pathtracer.cpp  pathtracerDI.cpp  rtui.cpp  sampler.cpp  scene.cpp  shape.cpp  texture.cpp  utility.cpp
